<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:contentDescription="@string/content_description_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/login"
        android:contentDescription="@string/content_description_login"
        android:icon="@drawable/login1"
        android:title="@string/login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/register"
        android:contentDescription="@string/content_description_register"
        android:icon="@drawable/register1"
        android:title="@string/register"
        app:showAsAction="ifRoom" />
</menu>