<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="@dimen/keyline_4"
        android:paddingTop="@dimen/keyline_5"
        android:paddingEnd="@dimen/keyline_4"
        android:paddingBottom="@dimen/keyline_5">

        <ImageView
            android:id="@+id/jLogoIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/jLogo"
            android:src="@mipmap/ic_love2_foreground"
            app:layout_constraintBottom_toTopOf="@+id/myNameTi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/myNameTi"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jLogoIv"
            app:startIconContentDescription="@string/male_start_icon"
            app:startIconDrawable="@drawable/male_big">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/myNameTe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/maleName"
                app:startIconDrawable="@drawable/male" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yourNameTi"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myNameTi"
            app:startIconContentDescription="@string/female_start_icon"
            app:startIconDrawable="@drawable/female_big">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/yourNameTe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/femaleName"
                app:startIconDrawable="@drawable/female" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/howlongBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/go"
            app:layout_constraintBottom_toTopOf="@+id/sumFl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourNameTi" />

        <FrameLayout
            android:id="@+id/sumFl"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
